--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,34 +8,46 @@ services:
     image: postgres:15-alpine
     container_name: estoque-db
     volumes:
-      # Este volume garante que os dados do banco de dados sejam persistidos.
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      # As credenciais são lidas do nosso ficheiro .env.
       - POSTGRES_USER=${ADMIN_DEFAULT_USERNAME}
       - POSTGRES_PASSWORD=${ADMIN_DEFAULT_PASSWORD}
       - POSTGRES_DB=estoque_db
     healthcheck:
-      # Garante que a aplicação só inicia depois que o DB estiver pronto.
       test: ["CMD-SHELL", "pg_isready -U ${ADMIN_DEFAULT_USERNAME} -d estoque_db"]
       interval: 5s
       timeout: 5s
       retries: 5
-    restart: unless-stopped # Garante que o DB reinicia com o servidor.
+    restart: unless-stopped
 
   # Serviço 2: A nossa Aplicação FastAPI
   app:
     container_name: estoque-app
     build: .
-    ports:
-      - "8000:8000"
+    # A porta 8000 já não é exposta ao exterior. Apenas o Nginx fala com ela.
+    # ports:
+    #   - "8000:8000"
     env_file:
       - .env
     depends_on:
       db:
-        # A aplicação espera que o serviço 'db' esteja "saudável".
         condition: service_healthy
-    restart: unless-stopped # Garante que a aplicação reinicia com o servidor.
+    restart: unless-stopped
+
+  # Serviço 3: O Proxy Reverso NGINX (O nosso "Recepcionista")
+  nginx:
+    image: nginx:alpine
+    container_name: estoque-proxy
+    ports:
+      # Expõe a porta principal 80 do servidor ao mundo.
+      - "80:80"
+    volumes:
+      # Mapeia o nosso ficheiro de configuração para dentro do container do Nginx.
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      # Garante que o Nginx só inicia depois da nossa aplicação estar pronta.
+      - app
+    restart: unless-stopped
 
 # Define os volumes que serão geridos pelo Docker.
 volumes:
