--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
         listen 80;
 
         # Rota para a aplicação de Estoque
-        # Acessível via http://dtiapp/estoque
+        # Acessível via http://HOSTNAME_DO_SERVIDOR/estoque
         location /estoque/ {
             # Reescreve o URL para remover o /estoque antes de enviar para a aplicação
             rewrite ^/estoque/(.*)$ /$1 break;
@@ -19,7 +19,7 @@ http {
         }
 
         # Rota para uma SEGUNDA APLICAÇÃO (exemplo)
-        # Acessível via http://dtiapp/outra-app
+        # Acessível via http://HOSTNAME_DO_SERVIDOR/outra-app
         location /outra-app/ {
             # proxy_pass http://nome_do_outro_servico:porta;
         }
