fix: Corrige prefixo de rota para deploy com NGINX

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,32 @@
-# nginx/nginx.conf
-# Esta configuração permite servir múltiplas aplicações no mesmo servidor.
 events {}
+
 http {
     server {
+        # O Nginx escutará na porta 80 (a porta padrão para tráfego HTTP)
         listen 80;
 
-        # Rota para a aplicação de Estoque
-        # Acessível via http://dtiapp/estoque
+        # Define a regra APENAS para os pedidos que começam com /estoque/
         location /estoque/ {
-            # Reescreve o URL para remover o /estoque antes de enviar para a aplicação
+            # Esta linha remove o prefixo /estoque do URL antes de o encaminhar para a aplicação.
             rewrite ^/estoque/(.*)$ /$1 break;
+
+            # --- A LINHA DA SOLUÇÃO ---
+            # Esta linha interceta os redirecionamentos da aplicação (ex: para /login)
+            # e corrige-os para incluir o prefixo (ex: para /estoque/login).
+            proxy_redirect / /estoque/;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            # Encaminha para o serviço 'app' do nosso docker-compose
+
+            # Encaminha todo o tráfego para o nosso serviço 'app'.
             proxy_pass http://app:8000;
         }
 
-        # Rota para uma SEGUNDA APLICAÇÃO (exemplo)
-        # Acessível via http://dtiapp/outra-app
-        location /outra-app/ {
-            # proxy_pass http://nome_do_outro_servico:porta;
-        }
+        # No futuro, você poderia adicionar outra aplicação aqui, por exemplo:
+        # location /outra-app/ {
+        #     proxy_pass http://nome_do_outro_servico:porta_interna;
+        # }
     }
 }
