--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,24 @@
-
 events {}
 
 http {
+    upstream fastapi_app {
+        server app:8000;
+    }
+
     server {
         listen 80;
 
-        location /estoque/ {
-            rewrite ^/estoque/(.*)$ /$1 break;
+        location = / {
+            return 301 /estoque/login;
+        }
 
-            proxy_redirect / /estoque/;
+        location /estoque/ {
+            proxy_pass http://fastapi_app;
 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            proxy_pass http://app:8000;
         }
     }
 }
-
